Migrate polynomial utility runner and batch to result v2 (#846)
Use the typed PolynomialTheoryUtilityCandidateResult throughout adapter execution, the 30-run target-blind orchestrator, and the 600-row pre-freeze batch. Remove the competing legacy result authority while keeping qualification sealed and Candidate-Freeze blocked on complete measurements.

Refs #748.